--- a/test/01-common-edits.ipynb
+++ b/test/01-common-edits.ipynb
@@ -31,7 +31,7 @@
    ],
    "source": [
     "base=\"bea\"\n",
-    "path_multitoken_inserts=open(f\"../pickles/{base}/common_multitoken_inserts.p\", \"rb\")\n",
+    "path_multitoken_inserts=open(f\"../resources/models/{base}/common_multitoken_inserts.p\", \"rb\")\n",
     "multitoken_inserts = pickle.load(path_multitoken_inserts)\n",
     "print(f\"{len(multitoken_inserts)} multitoken_inserts={multitoken_inserts}\")"
    ]
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "path_inserts=open(f\"../pickles/{base}/common_inserts.p\", \"rb\")\n",
+    "path_inserts=open(f\"../resources/models/{base}/common_inserts.p\", \"rb\")\n",
     "inserts = pickle.load(path_inserts)\n",
     "print(f\"{len(inserts)} inserts={inserts}\")"
    ]
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "path_deletes=open(f\"../pickles/{base}/common_deletes.p\", \"rb\")\n",
+    "path_deletes=open(f\"../resources/models/{base}/common_deletes.p\", \"rb\")\n",
     "deletes = pickle.load(path_deletes)\n",
     "print(f\"{len(deletes)} deletes={deletes}\")"
    ]
@@ -96,7 +96,7 @@
    ],
    "source": [
     "base=\"conll\"\n",
-    "path_multitoken_inserts=open(f\"../pickles/{base}/common_multitoken_inserts.p\", \"rb\")\n",
+    "path_multitoken_inserts=open(f\"../resources/models/{base}/common_multitoken_inserts.p\", \"rb\")\n",
     "multitoken_inserts = pickle.load(path_multitoken_inserts)\n",
     "print(f\"{len(multitoken_inserts)} multitoken_inserts={multitoken_inserts}\")"
    ]
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "path_inserts=open(f\"../pickles/{base}/common_inserts.p\", \"rb\")\n",
+    "path_inserts=open(f\"../resources/models/{base}/common_inserts.p\", \"rb\")\n",
     "inserts = pickle.load(path_inserts)\n",
     "print(f\"{len(inserts)} inserts={inserts}\")"
    ]
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "path_deletes=open(f\"../pickles/{base}/common_deletes.p\", \"rb\")\n",
+    "path_deletes=open(f\"../resources/models/{base}/common_deletes.p\", \"rb\")\n",
     "deletes = pickle.load(path_deletes)\n",
     "print(f\"{len(deletes)} deletes={deletes}\")"
    ]
